// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно формирует контент для общего блока 1`] = `
<InfoPopup
  className="ExclusiveOfferPopupDesktop"
  content={
    <div
      className="ExclusiveOfferPopupDesktop__popupContent"
    >
      <p
        className="ExclusiveOfferPopupDesktop__title"
      >
        Только на Авто.ру
      </p>
      <p
        className="ExclusiveOfferPopupDesktop__text"
      >
        Объявления, для которых продавцы указали, что они размещаются только на Авто.ру
      </p>
      <Link
        className="ExclusiveOfferPopupDesktop__link"
        metrika="exclusive,tap_more"
        target="_blank"
        url="https://yandex.ru/legal/autoru_terms_of_service/?lang=ru#1_1_17"
      >
        Подробнее
      </Link>
    </div>
  }
  directions={
    Array [
      "top-center",
      "right-center",
      "bottom-center",
      "left-center",
    ]
  }
  mainOffset={10}
  onShowPopup={[Function]}
  popupClassName=""
  secondaryOffset={-10}
  showTimeout={200}
  theme="plain"
/>
`;

exports[`правильно формирует контент попап для владельца 1`] = `
<InfoPopup
  className="ExclusiveOfferPopupDesktop"
  content={
    <div
      className="ExclusiveOfferPopupDesktop__popupContent"
    >
      <p
        className="ExclusiveOfferPopupDesktop__title"
      >
        Только на Авто.ру
      </p>
      <p
        className="ExclusiveOfferPopupDesktop__text"
      >
        Вы указали, что объявление размещается только на Авто.ру
      </p>
      <Link
        className="ExclusiveOfferPopupDesktop__link"
        metrikaParams="Exclusive_settings,tap_more"
        target="_blank"
        url="https://yandex.ru/legal/autoru_terms_of_service/?lang=ru#1_1_17"
      >
        Подробнее
      </Link>
    </div>
  }
  directions={
    Array [
      "top-center",
      "right-center",
      "bottom-center",
      "left-center",
    ]
  }
  mainOffset={10}
  onShowPopup={[Function]}
  popupClassName=""
  secondaryOffset={-10}
  showTimeout={200}
  theme="plain"
/>
`;

exports[`правильно формирует контент попап для не владельца 1`] = `
<InfoPopup
  className="ExclusiveOfferPopupDesktop"
  content={
    <div
      className="ExclusiveOfferPopupDesktop__popupContent"
    >
      <p
        className="ExclusiveOfferPopupDesktop__title"
      >
        Только на Авто.ру
      </p>
      <p
        className="ExclusiveOfferPopupDesktop__text"
      >
        Не пропустите — продавец указал, что объявление размещается только на Авто.ру
      </p>
      <Link
        className="ExclusiveOfferPopupDesktop__link"
        metrika="exclusive,tap_more"
        target="_blank"
        url="https://yandex.ru/legal/autoru_terms_of_service/?lang=ru#1_1_17"
      >
        Подробнее
      </Link>
    </div>
  }
  directions={
    Array [
      "top-center",
      "right-center",
      "bottom-center",
      "left-center",
    ]
  }
  mainOffset={10}
  onShowPopup={[Function]}
  popupClassName=""
  secondaryOffset={-10}
  showTimeout={200}
  theme="plain"
/>
`;
